--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,7 +1,4 @@
----
-title: "Reproducible Research: Peer Assessment 1"
-output: html_document
----        
+# Reproducible Research: Peer Assessment 1
 
 Setting the libraries and global options for the document:
 ```{r global}
