--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -103,7 +103,7 @@ sprintf("The total number of rows missing/NA steps is %s",
 
 ```
 
-Below is the code used to fill in the blank values using the mean value of that missing interval from the entire date range:
+Below is the code used to fill in the blank values.  I will be using the mean for that interval taken from the average daily activity pattern exercise (which takes the mean for non NA intervals across all dates):
 
 ```{r replace.missing}
 # Create population of NAs to fix
